# Bing-HomePic-Downloader

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: README.md  api.h  output.h
lib/: README.md
src/: README.md  api.c  main.c
